Added dev scripts for Codex to pick up

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage.*
 *.coverprofile
 profile.cov
 
+# Database
+backend/library.db
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
@@ -30,3 +33,4 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
